--- a/readme.adoc
+++ b/readme.adoc
@@ -12,22 +12,22 @@ You can optionally zip the individual xml files with gzip to save some space.
 These files and fields are currently handled out of the box
 
 
-* Posts("Id#postId:ID(Post)", "Title#title", "PostTypeId#postType:INT", "CreationDate#createdAt", "Score#score:INT",
-        "ViewCount#views:INT", "AnswerCount#answers:INT", "CommentCount#comments:INT", "FavoriteCount#favorites:INT", "LastEditDate#updatedAt")
+* Posts("Id#postId:ID(Post)", "Title#title", "PostTypeId#postType:INT", "CreationDate#createdAt:datetime", "Score#score:INT",
+        "ViewCount#views:INT", "AnswerCount#answers:INT", "CommentCount#comments:INT", "FavoriteCount#favorites:INT", "LastEditDate#updatedAt:datetime")
 
 ** Posts also creates
-** PostsRels(":START_ID(Post)", ":END_ID(Post)"); - all children of post
+** PostsRels(":END_ID(Post)", ":START_ID(Post)"); - all answers of a question
 ** PostsAnswers(":START_ID(Post)", ":END_ID(Post)") - the accepted answer
 ** UsersPosts(":START_ID(User)", ":END_ID(Post)"); - the user who created this post
 ** TagsPosts(":START_ID(Post)", ":END_ID(Tag)"); - one entry per tag
 
-* Users("Id#userId:ID(User)", "DisplayName#name", "Reputation#reputation:INT", "CreationDate#createdAt", "LastAccessDate#accessedAt",
+* Users("Id#userId:ID(User)", "DisplayName#name", "Reputation#reputation:INT", "CreationDate#createdAt:datetime", "LastAccessDate#accessedAt:datetime",
         "WebsiteUrl#url", "Location#location", "Views#views:INT", "UpVotes#upvotes:INT", "DownVotes#downvotes:INT", "Age#age:INT", "AccountId#accountId:INT");
-* Tags("TagName#tagId:ID(Tag)", "Count#count:INT", "WikiPostId#wikiPostId:INT"),
+* Tags("TagName#name:ID(Tag)", "Count#count:INT", "WikiPostId#wikiPostId:INT"),
 
 
 ----
-mvn compile exec:java -Dexec.mainClass=org.neo4j.example.so.StackOverflowConverter -Dexec.args="/path/to/data"
+mvn compile exec:java -Dexec.mainClass=org.neo4j.example.so.StackOverflowConverter -Dexec.args="/path/to/data" -DentityExpansionLimit=0 -DtotalEntitySizeLimit=0 -Djdk.xml.totalEntitySizeLimit=0
 ----
 
 Will create in the data directory these files
@@ -61,10 +61,43 @@ $NEO/bin/neo4j-import \
   --nodes:Post Posts_header.csv,Posts.csv.gz \
   --nodes:User Users_header.csv,Users.csv.gz \
   --nodes:Tag  Tags_header.csv,Tags.csv.gz \
-  --relationships:PARENT_OF PostsRels_header.csv,PostsRels.csv.gz \
-  --relationships:ANSWER PostsAnswers_header.csv,PostsAnswers.csv.gz \
-  --relationships:HAS_TAG TagsPosts_header.csv,TagsPosts.csv.gz \
+  --relationships:ANSWERED PostsRels_header.csv,PostsRels.csv.gz \
+  --relationships:ACCEPTED PostsAnswers_header.csv,PostsAnswers.csv.gz \
+  --relationships:TAGGED TagsPosts_header.csv,TagsPosts.csv.gz \
   --relationships:POSTED UsersPosts_header.csv,UsersPosts.csv.gz
+----
+
+Post-processing, e.g. with neo4j-shell or cypher-shell
+
+* set `:Question` label on postType:1
+* set `:Answer` label on accepted answer
+
+
+----
+call apoc.periodic.iterate("MATCH (p:Post) where p.postType = 1 return p", "SET p:Question",{batchSize:10000,iterateList:true,parallel:true});
+
+call apoc.periodic.iterate("MATCH (q:Question)-[:ACCEPTED]->(a) RETURN a", "SET a:Answer",{batchSize:10000,iterateList:true,parallel:true});
+
+create index on :Question(title);
+create index on :Question(createdAt);
+create index on :Question(score);
+create index on :Question(views);
+create index on :Question(answers);
+create index on :Question(updatedAt);
+create index on :Question(favorites);
+create index on :Question(comments);
+create index on :Tag(count);
+create index on :User(name);
+create index on :User(reputation);
+create index on :User(createdAt);
+create index on :User(views);
+create index on :User(upvotes);
+create index on :User(age);
+create index on :User(accountId);
+create index on :User(location);
+create constraint on (t:Tag) assert t.name is unique;
+create constraint on (u:User) assert u.id is unique;
+create constraint on (p:Post) assert p.id is unique;
 ----
 
 === Internals
